# AIAgent--

./: .gitignore  Codex环境配置.md  README.md  WSL2 + Ubuntu 24.04 + Docker Desktop 配置双内核环境.md  flowchart TD.mmd  pyproject.toml  【Agent开发】第一阶段：基石构建 —— 容器化交互与 Prompt 工程.md  【Agent开发】第三阶段：RAG 实战 —— 赋予 Agent “外脑”.md  【Agent开发】第二阶段：赋予 Agent “海马体” —— 持久化记忆与断点续聊.md  【Agent开发】第五阶段：RAG 深度优化实战 —— 从“可用”到“卓越”.md  【Agent开发】第四阶段：RAG 进阶实战 —— 从“能搜到”到“搜得准”.md  备忘录.txt  🗺️ 学习路线大纲 (Roadmap).md
data/: 小模型训练奇谭：从厨房到量子菜市场的AI养成手册.md
data/QApair/: 测试问答对样本.md
data/docs/: 奇葩星球有限公司员工差旅与报销标准手册.md
docker_agent_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sql/: DDL.sql
src/: main.py
src/Mini_Agent/: agent_framework.py  agent_v1.py  graph.py  state.py
src/Mini_Agent/tools/: __init__.py  base_tools.py  memory_tools.py  rag_tools.py
src/agent/: orchestrator.py  router.py
src/augmented/: README.md  __init__.py  analyst.py  config.py  data_generator.py  evaluator.py  llm_endpoints.json  llm_router.py  models.py  prompts.py  sinks.py  sources.py  strategies.py
src/common/: __init__.py  llm_adapter.py
src/core/: __init__.py  config.py  db_session.py  es_client.py  milvus_client.py  models.py  postgres_client.py  prompt_registry.py  redis_client.py
src/rag/: chunkers.py  factories.py  ingestion.py  pipeline.py  reranker.py  rewriter.py
src/self_rag/: README.md  engine.py
src/test/: recall_chunk_strategy.py  recall_test.py  redis_look.py  run_evaluation.py  sync_es.py  test.py  test_dynamic_rerank.py  test_ingestion.py  test_rag.py
src/utils/: xml_parser.py
(+28 files in other folders)
